# rust-cloud-run-demo

./: Cargo.toml  Dockerfile  README.md  Rocket.toml  benchmark.yml
migrations/2019-04-24-071738_initialize/: down.sql  up.sql
src/: main.rs  models.rs  routes.rs  schema.rs
